--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel server -d lib"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,17 @@
   },
   "homepage": "https://github.com/otelom/Elecctro-Back-End-Challenge#readme",
   "dependencies": {
-    "hapi": "^17.2.3"
+    "boom": "^7.2.0",
+    "catbox": "^10.0.2",
+    "catbox-memory": "^3.1.1",
+    "hapi": "^17.2.3",
+    "inert": "^5.1.0",
+    "joi": "^13.1.2",
+    "lout": "^11.0.0",
+    "vision": "^5.3.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   }
 }
