--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "inert": "^5.1.0",
     "joi": "^13.1.2",
     "lout": "^11.0.0",
+    "uuid": "^3.2.1",
     "vision": "^5.3.2"
   },
   "devDependencies": {
